--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2,5 +2,10 @@
   "Тестовый пример": "Тестовый пример",
   "Перевод": "Перевод",
   "Главная страница": "Главная страница",
-  "Язык": "Русский"
+  "Язык": "Русский",
+  "Страница не найдена": "Страница не найдена",
+  "О сайте" : "О сайте",
+  "Главная" : "Главная",
+  "Возникла непредвиденная ошибка": "Возникла непредвиденная ошибка",
+  "Обновить страницу": "Обновить страницу"
 }
