--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -9,5 +9,7 @@
   "Обновить страницу": "Reload page",
   "throw error": "throw error",
   "Главная": "Main",
-  "О сайте": "About us"
+  "О сайте": "About us",
+  "Переключить": "Relog"
+
 }
