fix sidebar, add button styles

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -10,5 +10,7 @@
   "throw error": "throw error",
   "Главная": "Главная",
   "О сайте": "О сайте",
-  "Переключить": "Переключить"
+  "Переключить": "Переключить",
+  "Короткий язык": "RU"
+
 }
